--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -131,7 +131,7 @@
   institution={W3C}
 }
 @TechReport{offlinedraft,
-  author={van Kesteren, A. and Hickson, I.},
+  author={Van Kesteren, A. and Hickson, I.},
   title={{O}ffline {W}eb {A}pplications},
   month={Feb},
   note={Available at: \url{http://dev.w3.org/html5/offline-webapps/}. Accessed 6-February-2012},
@@ -185,7 +185,7 @@
   institution={W3C},
 }
 @TechReport{mediaqueries,
-  author={Wium Lie, H. and Çelik, T. and Glazman, D. and van Kesteren, A.},
+  author={Wium Lie, H. and Çelik, T. and Glazman, D. and Van Kesteren, A.},
   title={{M}edia {Q}ueries},
   month={Jul},
   note={Available at: \url{http://www.w3.org/TR/css3-mediaqueries/}. Accessed 7-Febuary-2012},
@@ -388,7 +388,7 @@
   institution={W3C},
 }
 @TechReport{CORS,
-  author={van Kesteren, A.},
+  author={Van Kesteren, A.},
   title={{C}ross-{O}rigin {R}esource {S}haring},
   month={Dec},
   note={Available at: \url{http://dvcs.w3.org/hg/cors/raw-file/tip/Overview.html}. Accessed 11-Febuary-2012},
@@ -406,7 +406,7 @@
   institution={W3C},
 }
 @TechReport{FromOriginHeader,
-  author={van Kesteren, A.},
+  author={Van Kesteren, A.},
   title={{T}he {F}rom-{O}rigin {H}eader},
   month={Feb},
   note={Available at: \url{http://dvcs.w3.org/hg/from-origin/raw-file/tip/Overview.html}. Accessed 12-Febuary-2012},
@@ -501,4 +501,84 @@
   pages={95--106},
   year={2002},
   organization={ACM}
+}
+@TechReport{WebNotifications,
+  author={Gregg, J.},
+  title={{W}eb {N}otifications},
+  month={Sep},
+  note={Available at: \url{http://dev.w3.org/2006/webapi/WebNotifications/publish/Notifications.html}. Accessed 22-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{Fullscreen,
+  author={Van Kesteren, A. and Çelik, T.},
+  title={{F}ullscreen},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/fullscreen/raw-file/tip/Overview.html}. Accessed 22-Febuary-2012},
+  year={2012},
+  type={{E}ditor's {D}raft},
+}
+@TechReport{PointerLock,
+  author={Scheib, V.},
+  title={{P}pointer {L}ock},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/pointerlock/raw-file/default/index.html}. Accessed 22-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{ClipboardAPI,
+  author={Steen, H. R. M.},
+  title={{C}lipboard {API} and events},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/2006/webapi/clipops/clipops.html}. Accessed 22-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{Gamepad,
+  author={Graham, S. and Mielczarek, T.},
+  title={{G}amepad},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/gamepad/raw-file/default/gamepad.html}. Accessed 22-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{BatteryStatusAPI,
+  author={Kostiainen, A. and Lamouri, M.},
+  title={{B}attery {S}tatus {API}},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/dap/raw-file/tip/battery/Overview.html}. Accessed 22-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{VibrationAPI,
+  author={Kostiainen, A.},
+  title={{V}ibration {API}},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/2009/dap/vibration/}. Accessed 22-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{NetworkInformationAPI,
+  author={Lamouri, M.},
+  title={{T}he {N}etwork {I}nformation {API}},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/dap/raw-file/tip/network-api/index.html}. Accessed 22-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{ContactsAPI,
+  author={Tibbett, R.},
+  title={{C}ontacts {API}},
+  month={Feb},
+  note={Available at: \url{http://w3c-test.org/dap/contacts/}. Accessed 22-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
 }
