Add missing intros.

--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -50,7 +50,10 @@ for easy and visual session rating on touch screens.
 \chapter{Implementation}
 \label{chapter:implementation}
 
-\fixme{add intro to chapter}
+We implemented to example cases: a mobile web application for a
+developer conference and a networking library for data caching and
+fetching multiple times. Here we present the architecture and
+components of these implementations.
 
 \section{Conference Application}
 
