--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -582,3 +582,9 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@article{fling2011anatomy,
+  author={Fling, B.},
+  title={{A}natomy of a {HTML}5 {M}obile {A}pp},
+  year={2011},
+  note={Available at: \url{http://pinchzoom.com/posts/anatomy-of-a-html5-mobile-app/}. Accessed 22-Febuary-2012},
+}
