--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -134,8 +134,6 @@ application and a JavaScript library and fine-tuned the performance to
 get the best possible user experience. We then asses these
 optimizations and the compromises that had to be made.
 
-\fixme{Add more about background and objectives of this work}
-
 \section{Research Questions}
 
 Knowing the reasons and motivation for cross-platform HTML5 and the
@@ -932,14 +930,21 @@ these.
 \chapter{Tools for Modern Mobile Web Applications}
 \label{chapter:tools-and-techniques}
 
-\fixme{add intro to this chapter}
+With all the hype and trending surrounding HTML5 and mobile web
+applications, several libraries and tools have been developed to help
+building these applications. Fling \cite{fling2011anatomy} represents
+a typical anatomy of a mobile HTML5 application as shown in
+Figure~\ref{figure:anatomy-of-a-html5-mobile-app.png}.
 
 \begin{figure}[ht]
   \includegraphics[width=\textwidth]{images/anatomy-of-a-html5-mobile-app.png}
   \caption{HTML5 Mobile Application Anatomy according to
-    \url{http://pinchzoom.com/posts/anatomy-of-a-html5-mobile-app/}}
+    \cite{fling2011anatomy}.}
   \label{figure:anatomy-of-a-html5-mobile-app.png}
 \end{figure}
+
+In this chapter, we present tools, libraries, and techniques for
+building modern web applications.
 
 \section{Single-Page applications}
 \label{section:single-page-applications}
@@ -1101,11 +1106,16 @@ browsers. This also makes the applications future-proof when browsers
 are updated and new APIs and features are implemented in
 them. \cite{parker2010designing}
 
-\section{UI Libraries}
+\section{User Interface Libraries}
+
+User Interface libraries help in developing mobile web applications
+fast by providing finished and tested widgets and user interface
+components that can be combined and configured easily. We present some
+popular frameworks in the following sections.
 
 \subsection{jQuery Mobile}
 
-jQuery Mobile \footnote{\url{http://jquerymobile.com/}} is a client
+jQuery Mobile\footnote{\url{http://jquerymobile.com/}} is a client
 side framework optimized for touch devices. The user interface is
 based on HTML5 and the jQuery JavaScript
 framework\footnote{\url{http://jquery.com/}}. The aim of the project
@@ -1128,7 +1138,7 @@ several third-party extensions and widgets to the framework.
 
 \subsection{jQTouch}
 
-jQTouch \footnote{\url{http://jqtouch.com/}} is a lightweight open
+jQTouch\footnote{\url{http://jqtouch.com/}} is a lightweight open
 source library for high-end smartphones and tablet devices. It only
 supports the WebKit browser
 engine \footnote{\url{http://www.webkit.org/}} used in iOS, Android,
@@ -1148,12 +1158,12 @@ library.
 
 \subsection{Sencha Touch}
 
-Sencha Touch is an open source HTML5 mobile web application framework
-for iPhone, Android, and Blackberry devices. The framework is fully
-theamable and comes with a large set of user interface components. It
-also provides helpers for touch input
-handling. Figure~\ref{figure:sencha.png} shows example components of
-the library.
+Sencha Touch\footnote{\url{http://www.sencha.com/products/touch}} is
+an open source HTML5 mobile web application framework for iPhone,
+Android, and Blackberry devices. The framework is fully theamable and
+comes with a large set of user interface components. It also provides
+helpers for touch input handling. Figure~\ref{figure:sencha.png} shows
+example components of the library.
 
 \begin{figure}[ht]
   \begin{center}
