Generate pie chart of market shares and add it to the intro.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -90,9 +90,18 @@ budgeting, and build their applications only for one platform. This
 might be fine for independent developers, but a lot of potential
 customers or users are left out of these walled gardens. Big
 corporations or public organizations cannot afford leaving out large
-shares of the mobile market. \cite{berners2010long}
+shares of the mobile market (see smartphone sales by operating system
+in Figure~\ref{figure:market-share.png}). \cite{berners2010long}
 
-\fixme{add platform market share figure}
+\begin{figure}[ht]
+  \begin{center}
+    \includegraphics[width=0.6\textwidth]{images/market-share.png}
+    \caption{Worldwide Smartphone sales by operating systems in 4Q
+      2011 according to
+      \url{http://www.gartner.com/it/page.jsp?id=1924314}}
+    \label{figure:market-share.png}
+  \end{center}
+\end{figure}
 
 Being cross-platform is essential in today's mobile market. And if the
 required skills and resources for the native tools are not present,
