Add intro to results.

--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -1,7 +1,11 @@
 \chapter{Results}
 \label{chapter:results}
 
-\fixme{add intro to chapter}
+In this chapter we present the techniques we used and the compromises
+we had to make to tackle the problems in mobile web development using
+moderns tools introduced in Chapter~\ref{chapter:tools-and-techniques}
+and APIs introduced in Chapter~\ref{chapter:html5} and
+Chapter~\ref{chapter:other-related-specifications}.
 
 \section{Targeting Different Platforms}
 \label{section:targeting-platforms}
