Add discussion chapter.

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -1,28 +1,51 @@
 \chapter{Discussion}
 \label{chapter:discussion}
 
-\fixme{write chapter}
+The Web revolutionized the way we communicate, consume and produce
+information in ways that could not have been foreseen twenty years
+ago. On top of that, the mobile revolution has spread the Web from our
+home desks to anywhere we are, at any time. The roots of the Web lie
+in openness and universal accessibility for everyone, and today more
+and more people can afford a device to access the vast information
+spread all over the Web.
 
-\begin{itemize}
-\item validate results
-\item discuss about further work or possible improvements
-\item Page Speed mobile
-\item YSlow mobile bookmarklet
-\item img optimizations
-\item true progressive enhancement
-\end{itemize}
+One crucial factor in the universality is the open standards used for
+defining the protocols and APIs of the Web. HTML5 tackles many of the
+growing pains of the Web by defining a standard to handle all the
+devices capable of accessing the Internet. The set of new
+specifications or specification drafts is very large, and growing all
+the time.
 
-\begin{quotation}
-  \noindent \textit{Context  is what makes mobile such  a powerful and
-    exiting  medium. It  takes  the foundational  concepts of  western
-    civilization  and   evolves  them  to   create  a  new   means  of
-    understanding,  or what  ancient Creeks  called  inventio, meaning
-    both invention and discovery.}
-  \begin{flushright}
-    -- Brian Fling \cite{fling2009mobile}
-  \end{flushright}
-\end{quotation}
+In this work, we introduced the latest specifications and drafts
+related to modern web application development. Some of these
+specifications already have very good implementations in several
+browsers, but some are just very early drafts. We also presented
+modern tools and libraries for developing mobile web applications.
 
-There is grandeur in this view, but without idealism and relentless
-pursue of universal accessibility, the full potential of the Open Web
-might never be reached.
+Performance is one of the main components of a successful and usable
+application. In this work, we took a practical focus on performance
+optimization of mobile web applications. We also tackled other problem
+ares in developing these HTML5 applications.
+
+We implemented a schedule application for a developer conference and a
+utility library for handling unreliable mobile networks. The
+conference application was successfully used in two conferences by
+hundreds of people, and the received feedback was excellent. We had to
+solve a lot of problems and research solutions in areas that were new
+to us. We used the latest HTML5 and related APIs in several parts of
+our implementations.
+
+The Web is living very interesting times, and universality in
+geography and device types is growing. The browser is the culmination
+point of all the new development of the Web, and the new open
+standards make the browser a powerful platform for a vast array of
+different applications.
+
+Keeping the Web open and accessible for everyone is the key for
+technological advancement and innovation in the future. The Web is
+here to stay, and with the potential of HTML5 and other modern tools,
+we can build powerful applications that improve our day-to-day lives,
+as well as applications that revolutionize our lives. There is
+grandeur in this view, but without idealism and relentless pursue of
+universal accessibility, the full potential of the Open Web might
+never be reached.
