Fix table references.

--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -25,9 +25,8 @@ of these were used in our conference application.
 
 The User-Agent (\abbr{UA}) \abbr{HTTP} header contains detailed
 information of the web browser and the platform where the request
-originates from. As we can see from Table~\ref{table:user-agents}
-(\fixme{Check table ref number}), we can extract platform- and
-browser-specific information from the UA header.
+originates from. As we can see from Table~7.1\tableref, we can extract
+platform- and browser-specific information from the UA header.
 
 \begin{table}
   \begin{tabular}{ l | l | p{7cm} }
@@ -46,9 +45,8 @@ backend to provide a different offline AppCache manifest (see
 Section~\ref{section:appcache}) to different device groups. The
 detection was also used in defining the assets to be preloaded in the
 application. The devices were divided into four categories based on
-the rules defined in Table~\ref{table:device-detection-rules}
-(\fixme{Check table ref number}). There were serious limitations in
-this approach, and compromises had to be made.
+the rules defined in Table~7.2\tableref. There were serious
+limitations in this approach, and compromises had to be made.
 
 First, there is no way to surely know if the device actually is what
 it reports itself to be. Second, the most important thing to know when
@@ -164,8 +162,7 @@ The viewport meta tag was first introduced in Apple's iPhone and
 afterwards ported to other platforms, such as Android. The possible
 configuration options and default values might vary between
 platforms. Values accepted by Android are shown in
-Table~\ref{table:viewport-meta} (\fixme{Check table ref number}). iOS
-devices also support these same properties.
+Table~7.3\tableref. iOS devices also support these same properties.
 
 \begin{table}
   \begin{tabular}{ l | l | p{5cm} }
