Fix table reference.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -76,14 +76,13 @@ capabilities. \cite{charland2011mobile}
     platforms according to \cite{charland2011mobile}}
 \end{table}
 
-Table~\ref{table:native-skills} (\fixme{check table ref number}) shows
-the required developer skill sets for different platforms. As we see,
-each platform has its own programming language and \abbr{SDK}. A lot
-of knowledge and resources are needed to provide cross-platform
-applications for these platforms. Making several independent
-applications with the native tools is also very expensive, and adding
-features or just maintaining all these different applications becomes
-costly. \cite{charland2011mobile}
+Table~1.1\tablerefs shows the required developer skill sets for
+different platforms. As we see, each platform has its own programming
+language and \abbr{SDK}. A lot of knowledge and resources are needed
+to provide cross-platform applications for these platforms. Making
+several independent applications with the native tools is also very
+expensive, and adding features or just maintaining all these different
+applications becomes costly. \cite{charland2011mobile}
 
 Some developers are forced to make compromises due to resourcing or
 budgeting, and build their applications only for one platform. This
