Add numbers to RQs.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -147,11 +147,14 @@ optimizations and the compromises that had to be made.
 Knowing the reasons and motivation for cross-platform HTML5 and the
 importance of application performance and responsiveness:
 
-\begin{enumerate}
-\item What are the main problem areas in mobile web development?
-\item Do HTML5 and related specifications solve these problems?
-\item What other practical means do we have to solve these problems?
-\end{enumerate}
+\begin{itemize}
+\item \textbf{RQ1}: What are the main problem areas in mobile web
+  development?
+\item \textbf{RQ2}: Do HTML5 and related specifications solve these
+  problems?
+\item \textbf{RQ3}: What other practical means do we have to solve
+  these problems?
+\end{itemize}
 
 \chapter{HTML5}
 \label{chapter:html5}
